test: 로그인 컴포넌트 렌더링 테스트 코드 작성

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# env
+#
 .env
+.eslintignore
 
 # dependencies
 /node_modules
