test: 로비  컴포넌트 렌더링 테스트 코드 작성

--- a/package.json
+++ b/package.json
@@ -33,6 +33,11 @@
       "react-app/jest"
     ]
   },
+  "jest": {
+    "transformIgnorePatterns": [
+      "/node_modules/(?!axios)"
+    ]
+  },
   "browserslist": {
     "production": [
       ">0.2%",
