--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^8.0.0",
+    "jest-canvas-mock": "^2.5.0",
     "lint-staged": "^13.1.2",
     "pptr-testing-library": "^0.7.0",
     "prettier": "2.8.4",
