--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --coverage --watchAll --testPathIgnorePatterns=.*e2e.test.js",
-    "test:e2e": "react-scripts test --testPathPattern=.*e2e.test.js$",
+    "test": "react-scripts test --coverage --watchAll --testPathIgnorePatterns=.*e2e.spec.js",
+    "test:e2e": "react-scripts test --testPathPattern=.*e2e.spec.js$",
     "eject": "react-scripts eject",
     "prepare": "husky install",
     "pre-commit": "lint-staged"
@@ -65,6 +65,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^8.0.0",
     "jest-canvas-mock": "^2.5.0",
+    "jest-styled-components": "^7.1.1",
     "lint-staged": "^13.1.2",
     "pptr-testing-library": "^0.7.0",
     "prettier": "2.8.4",
